# AutonomizeQa

./: .gitignore  .uvrc  Makefile  README.md  conftest.py  justfile  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: qa-tests.yml
config/: test_config.yaml
docker/: Dockerfile  docker-compose.yml  start.sh
docs/: MANUAL_TEST_CASES.md  NON_FUNCTIONAL_TEST_CASES.md  TESTING_REQUIREMENTS.md
docs/templates/: test_case_template.md
docs/test_cases/: agent_integration.md  model_integration.md  safety_privacy.md  ui_ux_validation.md
reports/: .gitkeep
tests/: __init__.py  conftest.py
tests/agent_integration/: __init__.py  test_data_extraction.py
tests/fixtures/data/: .gitkeep
tests/fixtures/schemas/: claims_data.json  medical_chart.json  patient_record.json
tests/model_integration/: __init__.py  test_risk_classification.py
tests/safety_privacy/: __init__.py  test_hipaa_compliance.py
tests/ui_ux_validation/: __init__.py  test_medical_chart_upload.py
tests/utils/: __init__.py  validators.py
