[project]
name = "autonomize-ai-qa-test-suite"
version = "1.0.0"
description = "Comprehensive test suite for Autonomize AI Agentic Platform - Data Validation & Model Integration"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Core Testing Frameworks
    "pytest>=7.4.3",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    
    # API Testing
    "requests>=2.31.0",
    
    # Data Validation
    "jsonschema>=4.20.0",
    "pydantic>=2.5.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tests*"]
exclude = ["logs*", "reports*", "config*", "docker*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--html=reports/report.html",
    "--self-contained-html",
    "--json-report",
    "--json-report-file=reports/report.json",
    "--junitxml=reports/junit.xml",
    "--cov=tests",
    "--cov-report=html:reports/coverage",
    "--cov-report=term-missing",
]
markers = [
    "smoke: Smoke tests",
    "regression: Regression tests",
    "agent: Agent integration tests",
    "model: Model integration tests",
    "slow: Tests that take longer to execute",
]
timeout = 300

[tool.ruff]
line-length = 127
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by formatter)
    "W503",  # line break before binary operator
]

[tool.ruff.lint.mccabe]
max-complexity = 10

